--- a/ZoomAndroid/res/values/strings.xml
+++ b/ZoomAndroid/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="test_string_short">Lorem ipsum</string>
     <string name="test_string_long">Lorem ipsum sedare dolomit ipsum text sedare</string>
     <string name="facebook_app_id">1706893512890810</string>
+    <string name="title_activity_my_ad">MyAdActivity</string>
 
 </resources>
